--- a/public/locales/en/en.json
+++ b/public/locales/en/en.json
@@ -293,7 +293,7 @@
     ],
     "worksItem": [
       {
-        "img": "/portfolioImg/anserme/cover.jpg",
+        "img": "/portfolioImg/anserme/cover_anse.webp",
         "name": "Ansermé",
         "title": "ansermè",
         "descrizione": "Bio Bontà di Montagna",
@@ -302,7 +302,7 @@
         "button": ["Branding", "Label Design", "Social Media"]
       },
       {
-        "img": "/portfolioImg/bequet/cover.jpg",
+        "img": "/portfolioImg/bequet/cover_samuel.webp",
         "name": "Samuel Becquet",
         "title": "becquet",
         "descrizione": "Agriculture en Haute Montagne",
@@ -311,7 +311,7 @@
         "button": ["Branding", "Label Design"]
       },
       {
-        "img": "/portfolioImg/casadei/cover2.jpg",
+        "img": "/portfolioImg/casadei/cover_casadei.webp",
         "name": "Le Rêve en Vert",
         "title": "reve",
         "descrizione": "Azienda Agricola di Andrea Casadei",
@@ -320,7 +320,7 @@
         "button": ["Branding", "Label Design"]
       },
       {
-        "img": "/portfolioImg/phillacolor/cover_phillacolor.jpg",
+        "img": "/portfolioImg/phillacolor/cover_philla.webp",
         "name": "Phillacolor",
         "title": "phillacolor",
         "descrizione": "Eco-liquid Dye",
@@ -329,7 +329,7 @@
         "button": ["Branding", "Label Design"]
       },
       {
-        "img": "/portfolioImg/chappoz/cover.jpg",
+        "img": "/portfolioImg/chappoz/cover_chappoz.webp",
         "name": "Chappoz",
         "title": "chappoz",
         "descrizione": "Azienda Agricola",
@@ -338,7 +338,7 @@
         "button": ["Branding", "Label Design", "Social Media"]
       },
       {
-        "img": "/portfolioImg/daemy/cover.jpg",
+        "img": "/portfolioImg/daemy/cover_daemy.webp",
         "name": "Da Emy",
         "title": "daemy",
         "descrizione": "Piante Officinali",
@@ -347,7 +347,7 @@
         "button": ["Branding", "Label Design"]
       },
       {
-        "img": "/portfolioImg/horto/cover_horto.jpg",
+        "img": "/portfolioImg/horto/cover_horto.webp",
         "name": "Horto Sapiens",
         "title": "horto",
         "descrizione": "Prodotti tipici di Monte Amiata e Val d'Orcia",
@@ -356,7 +356,7 @@
         "button": ["Branding", "Label Design"]
       },
       {
-        "img": "/portfolioImg/isavivai/cover.jpg",
+        "img": "/portfolioImg/isavivai/cover_isavivai.webp",
         "name": "Isavivai",
         "title": "isavivai",
         "descrizione": "Il Verde che ti emoziona",
@@ -365,7 +365,7 @@
         "button": ["Branding", "Allestimenti"]
       },
       {
-        "img": "/portfolioImg/saint/cover.jpg",
+        "img": "/portfolioImg/saint/cover_saintgrat.webp",
         "name": "Saint Grat",
         "title": "saintgrat",
         "descrizione": "Azienda Agricola",
@@ -374,7 +374,7 @@
         "button": ["Branding", "Label Design"]
       },
       {
-        "img": "/portfolioImg/morzenti/cover.jpg",
+        "img": "/portfolioImg/morzenti/cover_morzenti.webp",
         "name": "Morzenti Daniele",
         "title": "morzenti",
         "descrizione": "Azienda Agricola",
@@ -385,7 +385,7 @@
     ],
     "singleWorks": {
       "ansermè": {
-        "img": "/portfolioImg/anserme/cover.jpg",
+        "img": "/portfolioImg/anserme/cover_anse.webp",
         "name": "Ansermé",
         "title": "anserme",
         "descrizione": "Bio Bontà di Montagna",
@@ -453,7 +453,7 @@
         }
       },
       "becquet": {
-        "img": "/portfolioImg/bequet/cover.jpg",
+        "img": "/portfolioImg/bequet/cover_samuel.webp",
         "name": "Samuel Becquet",
         "title": "becquet",
         "descrizione": "Agriculture en Haute Montagne",
@@ -511,7 +511,7 @@
         }
       },
       "reve": {
-        "img": "/portfolioImg/casadei/cover2.jpg",
+        "img": "/portfolioImg/casadei/cover_casadei.webp",
         "name": "Le Rêve en Vert",
         "title": "reve",
         "descrizione": "Azienda Agricola di Andrea Casadei",
@@ -568,7 +568,7 @@
         }
       },
       "phillacolor": {
-        "img": "/portfolioImg/phillacolor/cover_phillacolor.jpg",
+        "img": "/portfolioImg/phillacolor/cover_philla.webp",
         "name": "Phillacolor",
         "title": "phillacolor",
         "descrizione": "Eco-Liquid Dye",
@@ -618,7 +618,7 @@
         }
       },
       "chappoz": {
-        "img": "/portfolioImg/chappoz/cover.jpg",
+        "img": "/portfolioImg/chappoz/cover_chappoz.webp",
         "name": "Chappoz",
         "title": "chappoz",
         "descrizione": "Azienda Agricola",
@@ -678,7 +678,7 @@
         }
       },
       "daemy": {
-        "img": "/portfolioImg/daemy/cover.jpg",
+        "img": "/portfolioImg/daemy/cover_daemy.webp",
         "name": "Da Emy",
         "title": "daemy",
         "descrizione": "Piante Officinali",
@@ -736,7 +736,7 @@
         }
       },
       "horto": {
-        "img": "/portfolioImg/horto/cover_horto.jpg",
+        "img": "/portfolioImg/horto/cover_horto.webp",
         "name": "Horto Sapiens",
         "title": "horto",
         "descrizione": "Prodotti tipici di Monte Amiata e Val d'Orcia",
@@ -790,7 +790,7 @@
         }
       },
       "isavivai": {
-        "img": "/portfolioImg/isavivai/cover.jpg",
+        "img": "/portfolioImg/isavivai/cover_isavivai.webp",
         "name": "Isavivai",
         "title": "isavivai",
         "descrizione": "Il Verde che ti emoziona",
@@ -842,7 +842,7 @@
         }
       },
       "saintgrat": {
-        "img": "/portfolioImg/saint/cover2.jpg",
+        "img": "/portfolioImg/saint/cover_saintgrat.webp",
         "name": "Saint Grat",
         "title": "saintgrat",
         "descrizione": "Azienda agricola",
@@ -900,7 +900,7 @@
         }
       },
       "morzenti": {
-        "img": "/portfolioImg/morzenti/cover.jpg",
+        "img": "/portfolioImg/morzenti/cover_morzenti.webp",
         "name": "Morzenti Daniele",
         "title": "morzenti",
         "descrizione": "Azienda agricola",
