--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -891,7 +891,7 @@
     ],
     "worksItem": [
       {
-        "img": "/portfolioImg/anserme/cover.jpg",
+        "img": "/portfolioImg/anserme/cover_anse.webp",
         "name": "Ansermé",
         "title": "ansermè",
         "descrizione": "Bio Bontà di Montagna",
@@ -900,7 +900,7 @@
         "button": ["Branding", "Label Design", "Social Media"]
       },
       {
-        "img": "/portfolioImg/bequet/cover.jpg",
+        "img": "/portfolioImg/bequet/cover_samuel.webp",
         "name": "Samuel Becquet",
         "title": "becquet",
         "descrizione": "Agriculture en Haute Montagne",
@@ -909,7 +909,7 @@
         "button": ["Branding", "Label Design"]
       },
       {
-        "img": "/portfolioImg/casadei/cover2.jpg",
+        "img": "/portfolioImg/casadei/cover_casadei.webp",
         "name": "Le Rêve en Vert",
         "title": "reve",
         "descrizione": "Azienda Agricola di Andrea Casadei",
@@ -918,7 +918,7 @@
         "button": ["Branding", "Label Design"]
       },
       {
-        "img": "/portfolioImg/phillacolor/cover_phillacolor.jpg",
+        "img": "/portfolioImg/phillacolor/cover_philla.webp",
         "name": "Phillacolor",
         "title": "phillacolor",
         "descrizione": "Eco-Liquid Dye",
@@ -927,7 +927,7 @@
         "button": ["Branding", "Label Design"]
       },
       {
-        "img": "/portfolioImg/chappoz/cover.jpg",
+        "img": "/portfolioImg/chappoz/cover_chappoz.webp",
         "name": "Chappoz",
         "title": "chappoz",
         "descrizione": "Azienda Agricola",
@@ -936,7 +936,7 @@
         "button": ["Branding", "Label Design", "Social Media"]
       },
       {
-        "img": "/portfolioImg/daemy/cover.jpg",
+        "img": "/portfolioImg/daemy/cover_daemy.webp",
         "name": "Da Emy",
         "title": "daemy",
         "descrizione": "Piante Officinali",
@@ -945,7 +945,7 @@
         "button": ["Branding", "Label Design"]
       },
       {
-        "img": "/portfolioImg/horto/cover_horto.jpg",
+        "img": "/portfolioImg/horto/cover_horto.webp",
         "name": "Horto Sapiens",
         "title": "horto",
         "descrizione": "Prodotti tipici di Monte Amiata e Val d'Orcia",
@@ -954,7 +954,7 @@
         "button": ["Branding", "Label Design"]
       },
       {
-        "img": "/portfolioImg/isavivai/cover.jpg",
+        "img": "/portfolioImg/isavivai/cover_isavivai.webp",
         "name": "Isavivai",
         "title": "isavivai",
         "descrizione": "Il Verde che ti emoziona",
@@ -963,7 +963,7 @@
         "button": ["Branding", "Allestimenti"]
       },
       {
-        "img": "/portfolioImg/saint/cover2.jpg",
+        "img": "/portfolioImg/saint/cover_saintgrat.webp",
         "name": "Saint Grat",
         "title": "saintgrat",
         "descrizione": "Azienda Agricola",
@@ -972,7 +972,7 @@
         "button": ["Branding", "Label Design"]
       },
       {
-        "img": "/portfolioImg/morzenti/cover.jpg",
+        "img": "/portfolioImg/morzenti/cover_morzenti.webp",
         "name": "Morzenti Daniele",
         "title": "morzenti",
         "descrizione": "Azienda Agricola",
@@ -983,7 +983,7 @@
     ],
     "singleWorks": {
       "ansermè": {
-        "img": "/portfolioImg/anserme/cover.jpg",
+        "img": "/portfolioImg/anserme/cover_anse.webp",
         "name": "Ansermé",
         "title": "anserme",
         "descrizione": "Bio Bontà di Montagna",
@@ -1051,7 +1051,7 @@
         }
       },
       "becquet": {
-        "img": "/portfolioImg/bequet/cover.jpg",
+        "img": "/portfolioImg/bequet/cover_samuel.webp",
         "name": "Samuel Becquet",
         "title": "becquet",
         "descrizione": "Agriculture en Haute Montagne",
@@ -1166,7 +1166,7 @@
         }
       },
       "phillacolor": {
-        "img": "/portfolioImg/phillacolor/cover_phillacolor.jpg",
+        "img": "/portfolioImg/phillacolor/cover_philla.webp",
         "name": "Phillacolor",
         "title": "phillacolor",
         "descrizione": "Eco-Liquid Dye",
@@ -1216,7 +1216,7 @@
         }
       },
       "chappoz": {
-        "img": "/portfolioImg/chappoz/cover.jpg",
+        "img": "/portfolioImg/chappoz/cover_chappoz.webp",
         "name": "Chappoz",
         "title": "chappoz",
         "descrizione": "Azienda Agricola",
@@ -1276,7 +1276,7 @@
         }
       },
       "daemy": {
-        "img": "/portfolioImg/daemy/cover.jpg",
+        "img": "/portfolioImg/daemy/cover_daemy.webp",
         "name": "Da Emy",
         "title": "daemy",
         "descrizione": "Piante Officinali",
@@ -1334,7 +1334,7 @@
         }
       },
       "horto": {
-        "img": "/portfolioImg/horto/cover_horto.jpg",
+        "img": "/portfolioImg/horto/cover_horto.webp",
         "name": "Horto Sapiens",
         "title": "horto",
         "descrizione": "Prodotti tipici di Monte Amiata e Val d'Orcia",
@@ -1388,7 +1388,7 @@
         }
       },
       "isavivai": {
-        "img": "/portfolioImg/isavivai/cover.jpg",
+        "img": "/portfolioImg/isavivai/cover_isavivai.webp",
         "name": "Isavivai",
         "title": "isavivai",
         "descrizione": "Il Verde che ti emoziona",
@@ -1440,7 +1440,7 @@
         }
       },
       "saintgrat": {
-        "img": "/portfolioImg/saint/cover2.jpg",
+        "img": "/portfolioImg/saint/cover_saintgrat.webp",
         "name": "Saint Grat",
         "title": "saintgrat",
         "descrizione": "Azienda agricola",
@@ -1498,7 +1498,7 @@
         }
       },
       "morzenti": {
-        "img": "/portfolioImg/morzenti/cover.jpg",
+        "img": "/portfolioImg/morzenti/cover_morzenti.webp",
         "name": "Morzenti Daniele",
         "title": "morzenti",
         "descrizione": "Azienda agricola",
